[package]
name = "statsdump"
version = "0.1.0"
authors = ["Mariano Guerra <mariano@marianoguerra.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.53"
procfs = "0.5.3"
proc-mounts = "0.2.2"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = "2.33.0"
